Fixed name header so it works on smaller screens too

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -363,6 +363,7 @@ footer {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+    white-space: nowrap;
 
     h1, h2 {
         margin: 0;
@@ -378,7 +379,7 @@ footer {
     }
 
     h2 {
-        color: lighten($base-color, 25%);
+        color: lighten($base-color, 20%);
         font-weight: 500;
         font-size: 2.25em;
         margin-bottom: 15px;
@@ -387,12 +388,11 @@ footer {
 
 #lead-overlay {
     position: absolute;
-    height: 30%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 15em;
     width: 100%;
-    top: 35%;
-    right: 0;
-    bottom: 0;
-    left: 0%;
     background: rgba(1,1,1, 0.5);
     z-index: 1;
 }
